# meshlane

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  justfile  pr6-fixes.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_format.md
.github/workflows/: ci.yml  release.yml
src/meshio/: __init__.py  _helpers.py  _mesh.py
src/meshio/ansysInp/: _ansysInp.py
src/meshio/gmsh/: _gmsh41.py  main.py
src/meshio/med/: _med.py  _med41.py  _medmulti.py
src/meshio/openfoam/: _openfoam.py
src/meshlane/: __about__.py  _files.py  _mesh.py  _vtk_common.py
src/meshlane/_cli/: _info.py  _main.py
src/meshlane/abaqus/: _abaqus.py
src/meshlane/ansys/: _ansys.py
src/meshlane/ansysInp/: __init__.py  _ansysInp.py
src/meshlane/avsucd/: _avsucd.py
src/meshlane/exodus/: _exodus.py
src/meshlane/flac3d/: _flac3d.py
src/meshlane/gmsh/: _gmsh41.py  common.py  main.py
src/meshlane/hmf/: _hmf.py
src/meshlane/mdpa/: _mdpa.py
src/meshlane/med/: __init__.py  _med.py  _medmulti.py
src/meshlane/medit/: _medit.py
src/meshlane/nastran/: _nastran.py
src/meshlane/netgen/: _netgen.py
src/meshlane/neuroglancer/: _neuroglancer.py
src/meshlane/off/: _off.py
tests/: helpers.py  legacy_reader.py  performance.py  test_abaqus.py  test_ansys.py  test_ansysInp.py  test_avsucd.py  test_cgns.py  test_cli.py  test_dolfin.py  test_exodus.py  test_flac3d.py  test_gmsh.py  test_helpers.py  test_hmf.py  test_mdpa.py  test_med.py  test_medit.py  test_mesh.py  test_moab.py  test_nastran.py  test_netgen.py  test_neuroglancer.py  test_obj.py  test_off.py  test_openfoam.py  test_permas.py  test_ply.py  test_public.py  test_stl.py  test_su2.py  test_svg.py  test_tecplot.py  test_tetgen.py  test_ugrid.py  test_vtk.py  test_vtu.py  test_wkt.py  test_xdmf.py
tools/: paraview-meshlane-plugin.py
(+14 files in other folders)
