[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshlane"
version = "5.4.0"
description = "I/O for many mesh formats"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = [
  "mesh",
  "file formats",
  "scientific",
  "engineering",
  "fem",
  "finite elements"
]
authors = [
  {name = "Mariam Kesba", email = "mariam.kesba@simvia.tech"},
  {name = "Fatima-Zahra Noussi", email = "fatima-zahra.noussi@simvia.tech"},
  {name = "Lucas Sovre", email = "lucas.sovre@simvia.tech"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities",
]
dependencies = [
  "importlib_metadata; python_version<'3.8'",
  "numpy>=1.20.0,<2",
  "rich",
]

[project.optional-dependencies]
all = [
    "netCDF4",
    "h5py"  # CGNS, H5M, MED, XDMF formats
]

[project.urls]
homepage = "https://github.com/simvia-tech/meshlane"
code = "https://github.com/simvia-tech/meshlane"
issues = "https://github.com/simvia-tech/meshlane/issues"

[project.entry-points.console_scripts]
meshlane = "meshlane._cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

# [options.data_files]
# share/paraview-5.9/plugins =
#     tools/paraview-meshlane-plugin.py
